[v03] Refatorado e atualizado as funcionalidades. Testes e funcionalidades.